<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/jobListFragment">

    <fragment
        android:id="@+id/jobListFragment"
        android:name="com.example.chambaya.ui.JobListFragment"
        android:label="@string/nearby_jobs"
        tools:layout="@layout/fragment_job_list" />

    <fragment
        android:id="@+id/jobDetailFragment"
        android:name="com.example.chambaya.ui.JobDetailFragment"
        android:label="@string/job_details"
        tools:layout="@layout/fragment_job_detail" />

    <fragment
        android:id="@+id/jobMapFragment"
        android:name="com.example.chambaya.ui.JobMapFragment"
        android:label="@string/view_map"
        tools:layout="@layout/fragment_job_map" />
</navigation>

